RESOLVED FIXED203162
[iOS] REGRESSION(r251269): fast/events/ios/rotation/do-not-shrink-to-fit-content-after-rotation.html and fast/events/ios/rotation/layout-viewport-during-safari-type-rotation.html fail
https://bugs.webkit.org/show_bug.cgi?id=203162
Summary [iOS] REGRESSION(r251269): fast/events/ios/rotation/do-not-shrink-to-fit-cont...
Ryosuke Niwa
Reported 2019-10-18 13:05:49 PDT
After https://trac.webkit.org/r251269, these tests are failing or flaky.
Attachments
Fixes the tests (3.62 KB, patch)
2019-10-18 14:42 PDT, Ryosuke Niwa
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-18 14:04:34 PDT
Ryosuke Niwa
Comment 2 2019-10-18 14:42:26 PDT
Created attachment 381331 [details] Fixes the tests
Ryosuke Niwa
Comment 3 2019-10-18 14:48:48 PDT
Waiting for EWS
Ryosuke Niwa
Comment 4 2019-10-18 16:36:37 PDT
Comment on attachment 381331 [details] Fixes the tests Clearing flags on attachment: 381331 Committed r251309: <https://trac.webkit.org/changeset/251309>
Ryosuke Niwa
Comment 5 2019-10-18 16:36:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.