[iOS] REGRESSION(r251269): fast/events/ios/rotation/do-not-shrink-to-fit-content-after-rotation.html and fast/events/ios/rotation/layout-viewport-during-safari-type-rotation.html fail https://bugs.webkit.org/show_bug.cgi?id=203162 <rdar://problem/56418459>

Reviewed by Simon Fraser.

Source/WebKit:

Synchronously update the rendering before the orientation change and other viewport size updates.

Otherwise, resize event will be dispatched in the middle of orientation animation,
and would result in non-determistic results.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::dynamicViewportSizeUpdate):

LayoutTests:

Rebaselined the test now that the order of execution of orientationchange and resize events have changed.

* fast/events/ios/rotation/layout-viewport-during-safari-type-rotation-expected.txt:


Canonical link: https://commits.webkit.org/216575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251309 268f45cc-cd09-0410-ab3c-d52691b4dbfc